--- a/package.json
+++ b/package.json
@@ -16,11 +16,19 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@payloadcms/db-mongodb": "^3.23.0",
+    "@payloadcms/next": "^3.23.0",
+    "@payloadcms/payload-cloud": "^3.23.0",
+    "@payloadcms/richtext-lexical": "^3.23.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "geist": "^1.3.0",
+    "graphql": "^16.8.1",
+    "mongodb": "^6.12.0",
     "next": "^15.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "payload": "^3.23.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "sharp": "^0.33.5",
     "zod": "^3.23.3"
   },
   "devDependencies": {
