--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 # Added by Payload
 DATABASE_URI=your-connection-string-here
 PAYLOAD_SECRET=YOUR_SECRET_HERE
+PAYLOAD_PUBLIC_SERVER_URL=My-public-server-url
